# hashcode-2021

./: .flake8  main.py  pyproject.toml
output/: b.txt  c.txt  d.txt  e.txt  f.txt
